css/main.css
@import url('https://fonts.googleapis.com/css?family=Roboto');
* {
margin: 0px;
padding: 0px;
box-sizing: border-box;
font-family: 'Roboto', Arial;
}

:root {
--cornellRed: rgb(179, 27, 27);
--headerMarginBottom: 16px;
--halfwebpageWidth: 480px;
--headerHeight: 13em;
--coolBlue: rgb(0, 132, 255);
--themeColor: rgba(97, 96, 255, 1);
--desktop-nav-height: 60px;
--mobile-nav-height: 52px;
--footerHeight: 80px;
--footerColor: rgba(97, 96, 255, .2);
--hamburgerBunHeight: 4px;
--bunSeparation: 10px;
--themeGradient: linear-gradient(to right, var(--themeColor), #36D1DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */


}

.page {
position: relative;
min-height: 100vh;
width: 100vw;
}
@media only screen and (max-width: 1024px){
    /* Phone & tablet styles */
    .aboutme-container {
        margin: 8px auto;
    }
    #landing-page-container {
        display: flex;
        flex-direction: column;
    }
    .portrait-container {
        width: 80%;
        margin: 16px auto;
    }
    #page-content {
        padding-bottom: var(--footerHeight);
    }
    .modal-container {
        width: 90%;
    }
}

@media only screen and (max-width: 600px) {

.circular-portrait{
    width: 80%;
}
#nav-bar-desktop {
    display: none;
}
#logo-first-middle-last{
    display: none;
}
#logo-first-last{
    display: inherit;
}
#page-content {
    min-height: calc(100vh - var(--mobile-nav-height) - var(--headerMarginBottom))
}

}

@media only screen and (min-width: 600px) {
/* For tablets: */






#logo-first-last{
    display: none;
}

.circular-portrait {
    width: 50%;
}
#nav-bar-desktop {
    display: none;
}
#page-content {
    min-height: calc(100vh - var(--mobile-nav-height) - var(--headerMarginBottom))
}


}

@media only screen and (min-width: 1024px) {
    /* For desktop: */
    #page-content {
        min-height: calc(100vh - var(--desktop-nav-height) - var(--headerMarginBottom))
    }

    .navbar-container {
        height: var(--desktop-nav-height);
    }
    #nav-bar-desktop {
        display: flex;
    }

    #page-footer-navigator{
        display: none;
    }
    #nav-bar-mobile {
        display: none;
    }

    #page-content h1 {
        font-size: 2.7em;
        text-align: center;
        padding-top: 30px;

    }



    #landing-page-container {
        padding-bottom: 10%;
        padding-top: 5%;
    }

    .portrait-container {
        height: 100%;
        width: 40%;
        /* background-color: lightgray; */
        display: flex;
        justify-content: center;
        flex-direction: column;
    }
    .aboutme-container {
        width: 60%;
        margin: auto;
        text-align: center;
    }
    .aboutme-container hr {
        border-top: 3px solid var(--themeColor);
        margin-top: 25px;
        margin-bottom: 25px;
        margin-left: auto;
        margin-right: auto;
        width: 70%;
    }
    .circular-portrait {
        width: 336px;
        height: 336px;
        margin: auto auto auto auto;
        overflow: hidden;
        border-radius: 50%;
        position: relative;
        transition-duration: .4s;
        border: 3px solid var(--themeColor);
    }
    #landing-page-container {
        flex-direction: row;
        justify-content: center;
    }
    .portrait-container {
        margin: auto;
    }
    .aboutme-container {
        margin: auto 5% auto 0;
        text-align: center;
    }
    .portrait-container {
        width: 50%;
        margin: auto 0 auto 5%;
    }
    .modal-container {
        width: 800px;
    }
}


#landing-page-container {
display: flex;
}

#page-content> div:nth-last-child(2){
    margin-bottom: 1em;
    /* background-color: red; */
}

.navbar-container {
margin: auto;
position: relative;
transition: linear;
}

.navbar-logo {
float: left;
height: 100%;
/* width: 300px; */
margin-left: 3em;
text-align: center;
}

#nav-bar-mobile {
width: auto;
overflow: hidden;
height: var(--mobile-nav-height);
}

#nav-bar-mobile {
width: auto;
height: 100%;
;
}

#nav-bar-mobile ul {
margin: auto;
display: flex;
list-style: none;
align-items: center;
justify-content: center;
}

#nav-bar-mobile ul li {
font-size: 20px;
}

.navbar-logo a {
font-family: 'Roboto';
/* color: #eaeaea; */
color: var(--themeColor);
display: block;
margin: auto;
text-decoration: none;
font-size: 1.6em;
line-height: var(--desktop-nav-height);
font-weight: bold;
transition-duration: .35s;
}

.navbar-logo a:hover {
font-size: 1.7em;
}

header {
border-bottom: solid 1.5px #bdbdbd;
box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.01), 0 3px 24px rgba(0, 0, 0, 0.8);
margin-bottom: var(--headerMarginBottom);

}



#nav-bar-desktop ul{
padding-right: 2%;
position: absolute;
right: 0;
display: inline;
}



nav ul li {
/* background-color: red; */
height: 100%;
top: 0%;
}

nav ul li:nth-last-child(1) {
/* margin-right: 160px;  */
}

nav ul li a {
text-decoration: none;
color: inherit;
/* line-height: 48px; */
}

nav ul li:hover {
opacity: 1;
}

#page{
min-width: 100vw;
min-height: 100vh;
}

#dropdown-content .nav-bar-collapsable-column {
display: none;
background-color: white;
position: absolute;
top: 41px;
margin: auto;
width: 123px;
/* transition: ease-in; */
/* transition-duration: 1s; */
}

#dropdown-content:hover .nav-bar-collapsable-column {
display: flex;
flex-direction: column;
/* transition-duration: 2s; */
}

.nav-bar-collapsable-column {
border: 2px #6160ff solid;
}

.nav-link:hover {
opacity: 1;
}


.nav-link:after {
content: '';
position: absolute;
z-index: 0;
display: inline;
right: 10%;
bottom: 5px;
/* background: #fff; */
opacity: 1;
background: #6160ff;
transition-property: width;
transition-duration: .3s;
transition-timing-function: ease-out;
}

.nav-link:hover::after,
.nav-link:focus::after,
.nav-link:active::after {
width: 80%;
left: 10%;
}

#page-content {
display: flex;
flex-direction: column;
margin: 0px auto 0px auto;
position: relative;
font-family: Arial;
align-content: center;
height: 100%;
}
/* ... */

